<resources>
    <string name="app_name">ToDo Memory</string>
    <string name="msg_new_todo">New to-do</string>
    <string name="msg_edit_draft">Edit draft</string>
    <string name="msg_edit_todo">Edit to-do</string>
    <string name="msg_saved">Saved</string>
    <string name="notif_content_text">Remember things you want to do</string>
    <string name="todo_editor_hint">Type your to-do item here…</string>
    <string name="lbl_important">Important</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_no_history">No history saved</string>
    <string name="title_history">History</string>
    <string name="lbl_empty_todo">No things to do</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_redo">Redo</string>
    <string name="title_quick_help">Quick help</string>
    <string name="h_p_click">click</string>
    <string name="h_p_2">button to add new to-do</string>
    <string name="h_3">Swiple left to remove to-do</string>
    <string name="h_4">Swipe right to mark as done</string>
    <string name="h_5">Click to-do to revise</string>
    <string name="h_6">Now if you\'re in the history screen</string>
    <string name="h_7">Swipe left to delete from history</string>
    <string name="h_8"><![CDATA[Swipe right to redo & insert it into current to-do list]]></string>
    <string name="app_desc">A simple lightweight to-do list application to make you care more about things you\'d like to do instead of hassling with the tools</string>
    <string name="lbl_rate_app">Rate this app</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_text_align">Text alignment</string>
    <string name="lbl_list_order">To-do list order</string>
    <string name="lbl_theme">Theme</string>
    <string name="lbl_theme_dark">Dark</string>
    <string name="lbl_theme_light">Light</string>
    <string name="lbl_behavior">Behavior</string>
    <string name="lbl_remove_done">Remove when done</string>
    <string name="lbl_history_done">History when done</string>
    <string name="lbl_undo">Undo</string>
    <string name="msg_deleted">To-do successfully deleted</string>
    <string name="msg_todo_added">Added to current list</string>
    <string name="lbl_done_at">Done at %s</string>
    <string name="h_9">to enable/disable auto launch when the screen turn on</string>
</resources>
